data/all_generated_tests/raw_wast_tests/block_IncorrectHandlingofControlFlowAcrossModuleBoundaries_155.wast
;; 6. **Block with Multiple Imports and Exports**:    - Develop a module containing a `block` that interacts with multiple imported and exported functions. Ensure instructions within the `block` include branches and calls across the module boundary. Verify that `wizard_engine` and WebAssembly handle control flow and stack adjustments consistently.

(assert_invalid
  (module
    (import "env" "external_func1" (func $external_func1 (result i32)))
    (import "env" "external_func2" (func $external_func2 (param i32)))
    (func $type-import-export-control-flow
      (block (result i32)
        (br 0 (call $external_func1)) 
        (call $external_func2 (i32.const 42))
      )
    )
    (export "func" (func $type-import-export-control-flow))
  )
  "type mismatch"
)